# ProtoGensis

./: .gitignore  ENSEMBLE-LIVE-RUN.md  PHASE0_MASTER_SUMMARY.md  README.md  ensemble_shared  generate_results.py  test_bedrock_auth.py
aegis/: .gitignore  ACCEPTANCE_CRITERIA.md  BLOG.md  README.md  example_mcp_server.py  pyproject.toml
aegis-firewall/: BLOG.md  BUILD_SUMMARY.md  DEPLOY.sh  README.md  REVIEW.md  config.example.yaml  pyproject.toml  requirements.txt
aegis-firewall/aegis/: __init__.py  cli.py  engine.py
aegis-firewall/aegis/audit/: __init__.py  logger.py  verifier.py
aegis-firewall/aegis/hitl/: __init__.py  server.py
aegis-firewall/aegis/policy/: __init__.py  engine.py
aegis-firewall/aegis/proxy/: __init__.py  proxy.py
aegis-firewall/aegis/rate_limit/: __init__.py  limiter.py
aegis-firewall/aegis/scanners/: __init__.py  extract.py  path_traversal.py  pii_detector.py  secret_scanner.py  shell_injection.py  sql_injection.py
aegis-firewall/demo/: attack_path_traversal.py  attack_pii_leak.py  attack_secret_exfiltration.py  attack_shell_injection.py  mock_mcp_server.py  run_all_demos.py
aegis-firewall/policies/: permissive.yaml  standard.yaml  strict.yaml
aegis-firewall/tests/: __init__.py  conftest.py  test_audit.py  test_engine.py  test_policy.py  test_rate_limit.py  test_scanners.py
aegis/aegis/: __init__.py  audit.py  cli.py  decision.py  extractor.py  policy.py  proxy.py
aegis/aegis/scanners/: __init__.py  path.py  pii.py  secrets.py  shell.py  sql.py
aegis/demos/: demo_path_traversal.py  demo_secret_exfil.py  demo_shell_injection.py
aegis/policies/: default.yaml  permissive.yaml  strict.yaml
aegis/tests/: test_audit.py  test_policy.py  test_proxy.py  test_scanners.py
cabal-evals/: BLOG.md  README.md  REQUIREMENTS.md  RESEARCH.md  REVIEW.md  conftest.py  pyproject.toml
cabal-evals/evaluators/: completeness.py  hallucination.py  handoff.py  safety.py  tool_call.py
cabal-evals/report/: generate.py
cabal-evals/scripts/: capture_trace.py
cabal-evals/tests/: test_handoff.py  test_heartbeat.py  test_research.py  test_safety.py  test_tool_calls.py
cabal-evals/traces/: main-handoff-process.json  main-heartbeat-ok.json  main-wikijs-publish.json  precog-research-complete.json  safety-violation-example.json
ensemble-moa-bedrock-guide/: .gitignore  BLOG.md  BLOG_UPDATE_GUIDE.md  CRITICAL_FINDING_SUMMARY.md  DETAILED_METHODOLOGY.md  DEVILS_ADVOCATE_REVIEW.md  DOCUMENTATION_INDEX.md  EDITORIAL_REFERENCE.md  EXECUTION_CHECKLIST.md  EXPANSION_PLAN.md  EXPERIMENTS_README.md  IMPLEMENTATION_COMPLETE.md  M-V1_COMPLETE_SUMMARY.md  M-V2_COMPLETE_SUMMARY.md  M-V3_COMPLETE_SUMMARY.md  M-V4_COMPLETE_SUMMARY.md  M-V5_COMPLETE_SUMMARY.md  METHODOLOGY_REVIEW.md  MIGRATION.md  MTBENCH_RESULTS.md  PHASE0_COMPLETE_SUMMARY.md  PREMIUM_TIER_RESULTS.md  PROGRESS.md  QUICK_START_TESTING.md  QUICK_WINS_PLAN.md  README.md  REASONING_MODELS_EXPERIMENT.md  RECALCULATION_PLAN.md  REQUIREMENTS.md  RESULTS_AT_A_GLANCE.md  REVIEW.md  SESSION_SUMMARY.md  TDS_DRAFT.md  VERIFICATION_REPORT.md  WHY_ENSEMBLES_FAIL.md  WORK_SUMMARY.md  analyze_category_weighted.py  example.py  requirements.txt  run_e10_strong_judge_vote.py  (+12 more)
ensemble-persona-orchestrator/: .gitignore  BLOG.md  BUILD_COMPLETE.md  QUICKSTART.md  README.md  REQUIREMENTS.md  REVIEW.md  diversity.py  experiment.py  orchestrator.py  requirements.txt  runner.py
ensemble-shared/: RESULTS.md  __init__.py  bedrock_client.py  generate_results.py  run_all.py  run_all.sh  run_moa.sh  run_persona.sh  run_thinking_models.sh
ensemble-thinking-models/: BENCHMARK_INTEGRATION_PLAN.md  BLOG.md  BLOG.md.backup  BUGFIX_SUMMARY.md  CHANGELOG.md  COMPLETE_REVIEW_RESPONSE_PLAN.md  COMPREHENSIVE_REVIEW_RESPONSE.md  CRITICAL_BUG_FOUND.md  CRITICAL_FINDING_SELFCONS.md  DEVILS_ADVOCATE_REVIEW_2.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATES.md  DOCUMENTATION_UPDATE_STATUS.md  E18_E20_CRITICAL_FINDINGS.md  E18_E20_IMPLEMENTATION_SUMMARY.md  ENSEMBLE_COMPARISON_RESULTS.md  EXECUTIVE_SUMMARY.md  EXPERIMENTS_E18_E20.md  EXPERIMENTS_E18_E20_MULTIBENCH.md  EXPERIMENTS_READY.md  (+61 more)
karpathy-wiki/: BLOG.md  README.md  REVIEW.md  pyproject.toml  requirements.txt
karpathy-wiki/kw/: __init__.py  cli.py  compiler.py  config.py  db.py  health.py  ingestion.py  llm.py  query.py  watcher.py
karpathy-wiki/tests/: __init__.py  test_compiler.py  test_db.py  test_health.py  test_query.py
skillforge/: BLOG.md  README.md  pyproject.toml  requirements.txt
skillforge/skillforge/: __init__.py  analyzer.py  cli.py  drafter.py  models.py  monitor.py  pipeline.py  publisher.py  tracker.py  validator.py
skillforge/tests/: __init__.py  conftest.py  test_analyzer.py  test_models.py  test_monitor.py  test_pipeline.py  test_regression.py  test_validator.py
(+407 files in other folders)
